--- a/index.html
+++ b/index.html
@@ -3,8 +3,12 @@
 <head>
   <meta charset="utf-8">
   <title>Knotenliste</title>
+  <link rel="stylesheet" href="css/list.css">
 </head>
 <body>
+  <header>
+    <input id="filter">
+  </header>
   <table id="list"></table>
   <script src="//cdnjs.cloudflare.com/ajax/libs/d3/3.4.5/d3.min.js"></script>
   <script src="js/list.js"></script>
