Add homepage link to header, more CSS

--- a/list.html
+++ b/list.html
@@ -7,6 +7,7 @@
 </head>
 <body>
   <header>
+    <a href="http://freifunk.net/" target="_blank" id="homepage">freifunk.net</a>
     <input id="filter">
   </header>
   <table id="list"></table>
