--- a/list.html
+++ b/list.html
@@ -12,6 +12,7 @@
   </header>
   <table id="list"></table>
   <script src="//cdnjs.cloudflare.com/ajax/libs/d3/3.4.5/d3.min.js"></script>
+  <script src="config.js"></script>
   <script src="js/list.js"></script>
   <script src="js/util.js"></script>
 </body>
