Update d3 version, use more HTTPS

--- a/list.html
+++ b/list.html
@@ -7,11 +7,11 @@
 </head>
 <body>
   <header>
-    <a href="http://freifunk.net/" target="_blank" id="homepage">freifunk.net</a>
+    <a href="https://freifunk.net/" target="_blank" id="homepage">freifunk.net</a>
     <input id="filter">
   </header>
   <table id="list"></table>
-  <script src="//cdnjs.cloudflare.com/ajax/libs/d3/3.4.13/d3.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js"></script>
   <script src="config.js"></script>
   <script src="js/list.js"></script>
   <script src="js/util.js"></script>
