--- a/list.html
+++ b/list.html
@@ -10,6 +10,7 @@
     <a href="https://freifunk.net/" target="_blank" id="homepage">freifunk.net</a>
     <input id="filter">
   </header>
+  <div id="loading">LADE ALLE KNOTEN...</div>
   <table id="list"></table>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js"></script>
   <script src="config.js"></script>
