--- a/list.en.html
+++ b/list.en.html
@@ -2,18 +2,19 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Knotenliste</title>
+  <title>Nodelist</title>
   <link rel="stylesheet" href="css/list.css">
 </head>
 <body>
   <header>
     <a href="https://freifunk.net/" target="_blank" id="homepage">freifunk.net</a>
-    <input id="filter">
+    <input id="filter" placeholder="Filter">
   </header>
-  <div id="loading">LADE ALLE KNOTEN...</div>
+  <div id="loading">LOADING ALL THE NODES...</div>
   <table id="list"></table>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js"></script>
   <script src="config.js"></script>
+  <script src="js/loc.en.js"></script>
   <script src="js/list.js"></script>
   <script src="js/util.js"></script>
 </body>
