Move localization files to different directory

--- a/list.en.html
+++ b/list.en.html
@@ -13,8 +13,8 @@
   <div id="loading">LOADING ALL THE NODES...</div>
   <table id="list"></table>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js"></script>
+  <script src="loc/en.js"></script>
   <script src="config.js"></script>
-  <script src="js/loc.en.js"></script>
   <script src="js/list.js"></script>
   <script src="js/util.js"></script>
 </body>
