--- a/list.de.html
+++ b/list.de.html
@@ -13,8 +13,8 @@
   <div id="loading">LADE ALLE KNOTEN...</div>
   <table id="list"></table>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js"></script>
+  <script src="loc/de.js"></script>
   <script src="config.js"></script>
-  <script src="js/loc.de.js"></script>
   <script src="js/list.js"></script>
   <script src="js/util.js"></script>
 </body>
