--- a/list.de.html
+++ b/list.de.html
@@ -12,7 +12,7 @@
   </header>
   <div id="loading">LADE ALLE KNOTEN...</div>
   <table id="list"></table>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.17/d3.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.17/d3.min.js" integrity="sha256-dsOXGNHAo/syFnazt+KTBsCQeRmlcW1XKL0bCK4Baec=" crossorigin="anonymous"></script>
   <script src="loc/de.js"></script>
   <script src="config.js"></script>
   <script src="js/node.js"></script>
