--- a/list.en.html
+++ b/list.en.html
@@ -12,7 +12,7 @@
   </header>
   <div id="loading">LOADING ALL THE NODES...</div>
   <table id="list"></table>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.17/d3.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.17/d3.min.js" integrity="sha256-dsOXGNHAo/syFnazt+KTBsCQeRmlcW1XKL0bCK4Baec=" crossorigin="anonymous"></script>
   <script src="loc/en.js"></script>
   <script src="config.js"></script>
   <script src="js/node.js"></script>
